<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.fkjava.oa</groupId>
	<artifactId>oa</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<!-- 这种项目里面，src是没有作用的，只是为了被继承和管理子模块 -->
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.4.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<!-- 源代码的字符编码 -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- 生成的报告的字符编码 -->
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- 指定JDK的版本，可选：1.8、9、10 -->
		<java.version>10</java.version>
		<!-- Java 9/10要加上下面这个参数，如果不是Java 9/10则要删除才能正常使用 -->
		<spring-boot.run.jvmArguments>--add-modules java.xml.bind</spring-boot.run.jvmArguments>
	</properties>


	<dependencies>
		
	</dependencies>


	<!-- 列出一堆的子模块 -->
	<modules>
		<module>commons</module>
		<module>config</module>
		<module>identity</module>
		<module>resources</module>
	</modules>
</project>